@@ -69,8 +69,12 @@ dependencies {
 test {
     useJUnit()
     exclude "**/benchmarks/**"
-    
+
     jvmArgs += '-Xss1280k'
+
+    if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs += ['--add-opens', 'java.desktop/javax.swing.table=ALL-UNNAMED']
+    }
 
     jacoco.excludes = ['**/testsrc_tests_ecma_3_RegExp_perlstress*']
 
@@ -100,13 +104,13 @@ test {
 
 task sunSpiderBenchmark(type: JavaExec) {
     classpath = sourceSets.jmh.runtimeClasspath
-    main = 'org.openjdk.jmh.Main'
+    mainClass = 'org.openjdk.jmh.Main'
     args '-f', '1', '-bm', 'avgt', '-tu', 'us', 'SunSpider'
 }
 
 task v8Benchmark(type: JavaExec) {
     classpath = sourceSets.jmh.runtimeClasspath
-    main = 'org.openjdk.jmh.Main'
+    mainClass = 'org.openjdk.jmh.Main'
     args '-f', '1', '-i', '10', '-bm', 'avgt', '-tu', 'us', 'V8'
 }
 
@@ -120,19 +124,19 @@ task microBenchmark(type: JavaExec, description: 'JMH micro benchmark') {
         benchmark = "MathBenchmark"
     }
     classpath = sourceSets.jmh.runtimeClasspath
-    main = 'org.openjdk.jmh.Main'
+    mainClass = 'org.openjdk.jmh.Main'
     args '-f', '1', '-bm', 'avgt', '-tu', 'ns', '-r', '5', benchmark
 }
 
 task listBenchmarks(type: JavaExec, description: 'JMH benchmarks') {
     classpath = sourceSets.jmh.runtimeClasspath
-    main = 'org.openjdk.jmh.Main'
+    mainClass = 'org.openjdk.jmh.Main'
     args '-lp'
 }
 
 task jmhHelp(type: JavaExec, description: 'JMH benchmarks') {
     classpath = sourceSets.jmh.runtimeClasspath
-    main = 'org.openjdk.jmh.Main'
+    mainClass = 'org.openjdk.jmh.Main'
     args '-help'
 }
 
@@ -407,10 +411,20 @@ spotless {
     }
 }
 
+if (JavaVersion.current() > JavaVersion.VERSION_15 && (!project.hasProperty('org.gradle.jvmargs')
+            || !project.property('org.gradle.jvmargs').contains('com.sun.tools.javac.api'))) {
+    logger.warn('spotless plugin disabled due to bug, ' + \
+        'see README for a workaround when building with Java 16+.')
+    tasks.withType(com.diffplug.gradle.spotless.SpotlessTask) {
+        enabled = false
+    }
+}
+
 jacocoTestReport.dependsOn test
 jacocoTestReport {
     reports {
-        csv.enabled true
+        csv.required = true
+        html.required = true
     }
 }
 
